SSDM-3202: create second test suite for system tests
SVN: 36106