@@ -31,6 +31,14 @@ jar {
     }
 }
 
+task systemTestSuite(type: Test) {
+    useTestNG()
+    options.suites('sourceTest/java/tests_system.xml')
+    jvmArgs '-Xmx2048m', '-XX:MaxPermSize=256m'    
+    reports.html.destination = file("${project.buildDir}/reports/tests-system")
+}
+
+test.dependsOn(systemTestSuite)
 
 task zip(type: Zip) {
 	includeEmptyDirs false
